Recompiles validator_validity.min.js and uses it in tests

--- a/test/validitytests.html
+++ b/test/validitytests.html
@@ -8,8 +8,7 @@
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="../src/validity.js"></script>
-  <script src="../src/validator.js"></script>
+  <script src="../min/validator_validity.min.js"></script>
   <script src="qunit/qunit-1.14.0.js"></script>
   <script src="tests.js"></script>
   </body>
